--- a/pages/fixed/about.mdx
+++ b/pages/fixed/about.mdx
@@ -2,12 +2,14 @@ import Layout from 'lib/components/layout'
 import { Button } from '@zeit-ui/react'
 
 export const meta = {
-  title: 'About me',
+  title: 'Profile',
   date: '',
   description: '',
 }
 
-About me.
-
+* Reona Shimada
+* From kanazawa
+* Web/iOS Developer
+* Ruby on Rails, SwiftUI
 
 export default ({ children }) => <Layout meta={meta}>{children}</Layout>
