--- a/scripts/templates/fixed/about.mdx
+++ b/scripts/templates/fixed/about.mdx
@@ -2,7 +2,7 @@ import Layout from 'lib/components/layout'
 import { Button } from '@zeit-ui/react'
 
 export const meta = {
-  title: 'About me',
+  title: 'Profile',
   date: '',
   description: '',
 }
