fix social link

--- a/pages/fixed/about.mdx
+++ b/pages/fixed/about.mdx
@@ -7,9 +7,12 @@ export const meta = {
   description: '',
 }
 
-* Reona Shimada
-* From kanazawa
-* Web/iOS Developer
-* Ruby on Rails, SwiftUI
+- Reona Shimada
+- From kanazawa
+- Web Developer
+  - Ruby on Rails
+  - TypeScript
+  - React
+  - Swift
 
 export default ({ children }) => <Layout meta={meta}>{children}</Layout>
