--- a/pages/fixed/about.mdx
+++ b/pages/fixed/about.mdx
@@ -11,8 +11,7 @@ export const meta = {
 - From kanazawa
 - Web Developer
   - Ruby on Rails
-  - TypeScript
   - React
-  - Swift
+  - SwiftUI
 
 export default ({ children }) => <Layout meta={meta}>{children}</Layout>
