update previous posts

--- a/pages/posts/20200331.mdx
+++ b/pages/posts/20200331.mdx
@@ -9,6 +9,12 @@ export const meta = {
   image: "",
 }
 
+**※ブログを移行しました。**
+
+<Link href="/posts/20200605" icon color target="_blank">BlogをMDXとNext.jsで作成した</Link>
+
+<br />
+
 
 Webに関わる開発をしている方であれば、ソースコードのホスティングに[GitHub](https://github.co.jp)を利用している人は多いのではないでしょうか。
 
