--- a/pages/posts/20200518.mdx
+++ b/pages/posts/20200518.mdx
@@ -8,6 +8,12 @@ export const meta = {
   image: "",
 }
 
+**※ブログを移行しました。**
+
+<Link href="/posts/20200605" icon color target="_blank">BlogをMDXとNext.jsで作成した</Link>
+
+<br />
+
 このブログは[Hugoを使って作成した](https://reona5.github.io/posts/2020/0331_github_page_hugo/)のですが、SEO関連の設定が中途半端だったので今回一通り設定しました。
 
 設定したのは以下の2つです。
