--- a/pages/posts/20200620.mdx
+++ b/pages/posts/20200620.mdx
@@ -2,17 +2,11 @@ import Layout from 'lib/components/layout'
 import {} from '@zeit-ui/react'
 
 export const meta = {
-  title: '20200620',
+  title: 'Vim上に画像をペーストする',
   date: '2020-06-20T14:09:10.389Z',
   description: '',
   image: '',
 }
-
-My first post.
-
-
-
-
 
 
 
