update blogs title

--- a/pages/posts/20200518.mdx
+++ b/pages/posts/20200518.mdx
@@ -2,7 +2,7 @@ import Layout from 'lib/components/layout'
 import { Link } from '@zeit-ui/react'
 
 export const meta = {
-  title: "静的サイトジェネレータで作成したブログを検索結果に表示する",
+  title: "SSG で作成したブログを検索結果に表示する",
   date: "2020-05-18T11:38:45.956Z",
   description: "",
   image: "",
