--- a/pages/posts/20200605.mdx
+++ b/pages/posts/20200605.mdx
@@ -4,7 +4,7 @@ import YouTube from 'react-youtube'
 import { TwitterTweetEmbed } from 'react-twitter-embed'
 
 export const meta = {
-  title: 'BlogをMDXとNext.jsで作成した',
+  title: 'Blog を MDX, Next.js で作成した',
   date: '2020-06-05T15:01:25.274Z',
   description: '',
   image: '',
