--- a/pages/posts/20200613.mdx
+++ b/pages/posts/20200613.mdx
@@ -2,7 +2,7 @@ import Layout from 'lib/components/layout'
 import { Link } from '@zeit-ui/react'
 
 export const meta = {
-  title: 'OpenAPI（Swagger）でAPIリファレンス作成',
+  title: 'OpenAPI (Swagger) で APIリファレンス作成',
   date: '2020-06-13T05:35:45.983Z',
   description: '',
   image: '',
