--- a/pages/posts/20200620.mdx
+++ b/pages/posts/20200620.mdx
@@ -2,7 +2,7 @@ import Layout from 'lib/components/layout'
 import { Link } from '@zeit-ui/react'
 
 export const meta = {
-  title: 'VimでMarkdownファイルに画像をペーストして展開する',
+  title: 'Vim で Markdown に画像をペーストして展開する',
   date: '2020-06-20T14:09:10.389Z',
   description: '',
   image: '',
