--- a/pages/posts/20200708.mdx
+++ b/pages/posts/20200708.mdx
@@ -35,7 +35,7 @@ Swift 5.2 では、アクセスレベルは5段階あります。
 業務でアクセスレベルを考える上で、使う場面が多くなってくるのは `private` と `internal` でしょう。
 クラス外から見える必要があるのかを考え、基本的にその必要がないようなら `private` メソッドを使うとよさそうです。
 アクセスレベルが高いと、予期せぬ動作が起きたり不正にアクセスされる可能性がでてくるためです。
-OSS開発など、他モジュールから干渉することを考える場合は `open` , `public` を使う場面が多くなりそうですね。
+OSS開発やライブラリを使用する場合など、他モジュールから干渉することを考える場合は `open` , `public` を使う場面が多くなりそうですね。
 
 
 export default ({ children }) => <Layout meta={meta}>{children}</Layout>
