--- a/pages/posts/20200720.mdx
+++ b/pages/posts/20200720.mdx
@@ -2,7 +2,7 @@ import Layout from 'lib/components/layout'
 import {} from '@zeit-ui/react'
 
 export const meta = {
-  title: '[Vim] 言語ごとにコマンドを使い分ける',
+  title: '[Vim] 定義元ジャンプを filetype で使い分ける',
   date: '2020-07-20T11:39:15.973Z',
   description: '',
   image: '',
@@ -10,17 +10,18 @@ export const meta = {
 
 # はじめに
 
-`.vimrc` たまにいじりだすと止まらなくなりますよね。テスト勉強中に掃除しだしたら止まらないみたいに。
+`.vimrc` たまにいじりだすと止まらなくなりますよね。テスト勉強中に掃除しだしたら止まらない感覚と似てます🤔
 
 最近だと、[coc.nvim](https://github.com/neoclide/coc.nvim)に非常にお世話になっています。
 VSCodeのようなLSP(Language Server Protocol)のサポートで、ほとんどの言語で強力な補完を実現してくれます。
-補完が感動モノなんですが、定義元ジャンプや参照元ジャンプ、簡易リファレンスも参照できて、超すごいです。
+この補完は本当に感動モノなんですが、定義元ジャンプや参照元ジャンプ、簡易リファレンスも参照できて、超すごいです。
 以前はCtagsでタグを生成しジャンプするスタンダードな方法で開発していましたが、coc.nvimだとより高速です。
 
 最近はSwiftでの開発でXCodeとXVim2を使っていますが、標準のジャンプ機能がかなり優秀ですね。
-ただRubyの場合だとジャンプが機能してくれず、それはなかなかに困っていました。
+coc.nvimはRubyファイルの場合だとジャンプが機能してくれず、それはなかなかに困っていました。
 
-今回はファイルタイプに応じてジャンプのコマンドを使い分ける設定をしたので、以下に書いていきます。
+Rubyの場合、以前Ctagsで上手く動作することは確認済みなので、
+今回はファイルタイプに応じてジャンプのコマンドを使い分ける設定をしました。
 
 <br />
 
@@ -82,6 +83,8 @@ set tags=./tags;
 autocmd filetype ruby nnoremap <C-]> g<C-]>
 
 ```
+
+定義元ジャンプは `Ctrl-]` 、ジャンプ元へ戻る場合は `Ctrl-o` 、参照元ジャンプは `Ctrl-t` です。
 
 これでRubyファイルの場合はctags、その他のファイルだとcoc.nvimのジャンプが実行されるようになりました🎉
 
