--- a/pages/posts/20200720.mdx
+++ b/pages/posts/20200720.mdx
@@ -50,7 +50,7 @@ $ ctags -R .
 $ ctags -R . --languages=Ruby
 ```
 
-調査中に[こちらの記事](https://dev.to/lucasprag/little-trick-to-use-ctags-to-jump-to-definition-even-inside-gems-like-rails-on-vim-244j)でたまたま見つけたのですが、以下を実行すればgemの内部コードへのパスを設定し、ジャンプできるようになります。いちいちブラウザで調べる必要がなくなったので嬉しい、、
+調査中に[こちらの記事](https://dev.to/lucasprag/little-trick-to-use-ctags-to-jump-to-definition-even-inside-gems-like-rails-on-vim-244j)でたまたま見つけたのですが、以下のコマンド実行後にタグ生成すればgemの内部コードへのパスを設定し、ジャンプできるようになります。いちいちブラウザで調べる必要がなくなったので嬉しい、、
 
 ```
 $ bundle install --path=vendor/bundle
