--- a/pages/fixed/about.mdx
+++ b/pages/fixed/about.mdx
@@ -10,7 +10,7 @@ export const meta = {
 |key|value|
 |----|----|
 |Name|嶋田 怜央成|
-|Location|静岡県|
+|Location|横浜市|
 |Mail|shimada.reona@gmail.com|
 |Twitter|[@reona_5](https://twitter.com/reona_5)|
 
@@ -18,6 +18,7 @@ export const meta = {
 
 ## Hobby
 
+- ハンドボール
 - カラオケ
 - 音楽フェス, コンサート
 - 料理
@@ -28,26 +29,16 @@ export const meta = {
 
 ## Skills
 
-### 業務経験あり
-
 - Ruby
   - Ruby on Rails
 - Swift
   - SwiftUI
   - Combine
-
-### 業務経験あり（触った程度）
-
 - JavaScript
-  - Vue.js
-  - JQuery
-
-### 趣味
-
 - TypeScript
-  - React.js
-    - Next.js
-- Go（社内勉強会）
+  - Vue
+  - React
+    - Next
 
 <br />
 
