--- a/pages/posts/20210629.mdx
+++ b/pages/posts/20210629.mdx
@@ -15,18 +15,22 @@ export const meta = {
 # 利用するライブラリ
 
 [Shougo/dein.vim](https://github.com/Shougo/dein.vim)
+
 [vim-test/vim-test](https://github.com/vim-test/vim-test)
+
 [tpope/vim-dispatch](https://github.com/tpope/vim-dispatch)
 
 # 環境
 
 MacOS BigSur Version 11.4
+
 iterm2 3.4.8
+
 Neovim v0.5.0-nightly
 
 # 設定
 
-```
+```toml
 [[plugins]]
 repo = 'tpope/vim-dispatch'
 on_ft = ['ruby']
