Update a last post

--- a/pages/posts/20210702.mdx
+++ b/pages/posts/20210702.mdx
@@ -58,16 +58,21 @@ Overwrite /project/config/application.rb? (enter "h" for help) [Ynaqdh]
 
 - 以上の表示が繰り返されるので、基本的には `d` で Diff を確認し、 `Y` で上書き実行。
   - コマンド完了後、上書きされたファイルを再度 Diff を見ながら手直しで修正。
+7. 最後に開発環境・デモ環境で動作確認。できれば複数人にレビューを受ける。
 
 ## 最後に
 
-- 差分は非常に大きくなるので、可能なら適切な粒度でPRを分割したほうがよさそう。（Webpacker のアップグレードは分けた。）分割することによって逆にレビュワーが混乱するケースもあると思うので注意が必要。
+- gem は便利なものが多い一方で、今回は密結合になっていたために対応に非常に苦労した。一長一短。
+- グレードアップによる差分は非常に大きくなる可能性があるので、状況に応じて適切な粒度でPRを分割したほうがよさそう。（今回 Webpacker のアップグレードは別PRに分けた。）
+  
+  分割することによって逆にレビュワーが混乱するケースもあると思うので注意が必要。
 - `rails app:update` はプロジェクトの設定ファイルが結構書き換わるので慎重に。レビューを念入りに頼むのも good
 - 大変なタスクだったけど、自分でタスクを取りに行って本当によかった。
   - 使われてる gem の仕様の理解がかなり深まったし、Rails やプロジェクトへの理解も深まった。
   - 自分の中の OSS のコードを読みにいくハードルが下がった。
   - テスト時や `yarn install` 、各サーバー起動時のログ等の warning が格段に減って綺麗になった。
+- Rails ガイドをはじめ、多くの情報がわかりやすくまとまった記事を複数参考にさせて頂いたので、とてもありがたい…🙏
 
-フレームワークやパッケージのアップグレードはプロダクトを継続的に改善していく上で避けては通れない、早めに取り組んだほう受ける恩恵も多いだろうなと実感した。
+フレームワークやパッケージのアップグレードは優先度がそこまで高く見積もられない傾向にあるが、プロダクトを継続的に改善していく上では避けて通れないし、早めに取り組んだほう受ける恩恵も多いだろうなと実感した。
 
 export default ({ children }) => <Layout meta={meta}>{children}</Layout>
