Update a last post

--- a/pages/posts/20210702.mdx
+++ b/pages/posts/20210702.mdx
@@ -44,7 +44,8 @@ Railsガイドにはマイナーバージョンごとに変更点や追加機能
 3. `bundle update` で Rails 以外の gem を最新にする
 - webpacker が `4.0.7` であり、差分が大きくなりそうだったのと、今回のアップグレードに必須ではなかったため、別のPRに切り出した。
 - この時点でまずテストが走らない事態が発生。[gem active_interaction](https://github.com/AaronLasseigne/active_interaction) のメジャーバージョンが変わったことによる仕様変更が直接的な原因。
-  - 該当箇所を修正後、他に257件のテストケースが失敗。既存コードの使い方が間違っていたが、gem の仕様が厳格になったことで間違っている箇所が一斉にパスしなくなった。愚直に修正。
+  - 該当箇所を修正後、他に257件のテストケースが失敗。既存コードの使い方が間違っていたが、gem の仕様が厳格になったことで間違っている箇所が一斉にパスしなくなった。
+  - gem の Changelog, メジャーアップグレードの PR の File Changed でどのコードの変更が影響しているのか模索しつつ、一つ一つ修正。
 4. Rails のパッチバージョンを上げる。テストがパスすることの確認。
 -  `6.0.3.7` -> `6.0.4` の変更。
 5. 次のマイナーバージョンの最新パッチに移行。
