--- a/pages/posts/20210702.mdx
+++ b/pages/posts/20210702.mdx
@@ -59,6 +59,7 @@ Overwrite /project/config/application.rb? (enter "h" for help) [Ynaqdh]
 
 - 以上の表示が繰り返されるので、基本的には `d` で Diff を確認し、 `Y` で上書き実行。
   - コマンド完了後、上書きされたファイルを再度 Diff を見ながら手直しで修正。
+  - [Rails Diff](https://railsdiff.org/6.0.3.7/6.1.4) というサイトがあり、特定バージョン間の差分を確認することもできるので便利。
 7. 最後に開発環境・デモ環境で動作確認。できれば複数人にレビューを受ける。
 
 ## 最後に
