fix: Fix headings in Past posts

--- a/dev/src/content/posts/20200720.mdx
+++ b/dev/src/content/posts/20200720.mdx
@@ -4,7 +4,7 @@ description: ''
 pubDate: '2020-07-20T11:39:15.973Z'
 ---
 
-# はじめに
+## はじめに
 
 `.vimrc` たまにいじりだすと止まらなくなりますよね。テスト勉強中に掃除しだしたら止まらない感覚と似てます🤔
 
