--- a/dev/src/content/posts/20210629.mdx
+++ b/dev/src/content/posts/20210629.mdx
@@ -4,11 +4,11 @@ description: ''
 pubDate: '2021-06-29T06:33:14.640Z'
 ---
 
-# はじめに
+## はじめに
 
 タイトルには `Docker 環境で` と記したが、自動的に Docker 環境かそうでないかを識別するよう設定している。
 
-# 利用するライブラリ
+## 利用するライブラリ
 
 [Shougo/dein.vim](https://github.com/Shougo/dein.vim)
 
@@ -16,7 +16,7 @@ pubDate: '2021-06-29T06:33:14.640Z'
 
 [tpope/vim-dispatch](https://github.com/tpope/vim-dispatch)
 
-# 環境
+## 環境
 
 MacOS BigSur Version 11.4
 
@@ -24,7 +24,7 @@ iterm2 3.4.8
 
 Neovim v0.5.0-nightly
 
-# 設定
+## 設定
 
 ```toml
 [[plugins]]
