--- a/dev/src/content/posts/20210409.mdx
+++ b/dev/src/content/posts/20210409.mdx
@@ -8,7 +8,7 @@ pubDate: '2021-04-09T15:33:31.968Z'
 
 init.vim (.vimrc) に以下を記述
 
-```
+```vim
 let g:vim_markdown_conceal = 0
 ```
 
@@ -16,7 +16,7 @@ let g:vim_markdown_conceal = 0
 
 以下を追加で記述
 
-```
+```vim
 let g:vim_markdown_folding_disabled = 1
 let g:vim_markdown_conceal_code_blocks = 0
 ```
