--- a/dev/src/content/posts/20220205.mdx
+++ b/dev/src/content/posts/20220205.mdx
@@ -11,12 +11,12 @@ pubDate: '2022-02-05T08:54:59.227Z'
 以下の issue にある設定を行う。
 [How to use true colors in vim under tmux? #1246](https://github.com/tmux/tmux/issues/1246)
 
-```
-1. Edit .tmux.conf
+```vim
+" 1. Edit .tmux.conf
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-2. Edit: .vimrc
+" 2. Edit: .vimrc
 if exists('+termguicolors')
   let &t_8f = "\<Esc>[38;2;%lu;%lu;%lum"
   let &t_8b = "\<Esc>[48;2;%lu;%lu;%lum"
