fix: Fix assets path
refs: https://docs.astro.build/ja/guides/assets/#update-config

--- a/src/content/posts/20200331.mdx
+++ b/src/content/posts/20200331.mdx
@@ -37,7 +37,7 @@ CI/CDツールとしては[CircleCI](https://circleci.com/ja/)がよく使われ
 GitHubで今回使用するリポジトリを作成し、リポジトリメニューの中からActionsを選択します。
 言語によっては既にあるワークフローを使うこともできるみたいですね。
 
-![](/assets/images/github_sc1.png)
+![](/github_sc1.png)
 
 今回は右上にある `Set up a workflow yourself` を選択します。
 
