--- a/src/content/posts/20200706.mdx
+++ b/src/content/posts/20200706.mdx
@@ -9,7 +9,7 @@ pubDate: '2020-07-05T15:48:54.100Z'
 
 ブログ記事のmetaタグを読み取って動的にOGP画像を作成するスクリプト [Automattic / node-canvas](https://github.com/Automattic/node-canvas) を使って作成しました。
 
-![](/assets/images/2020-07-06-01-13-49.png)
+![](/2020-07-06-01-13-49.png)
 
 [[Next.js] Headタグ内のタグ重複を防ぐ](/posts/20200614)
 
@@ -25,7 +25,7 @@ pubDate: '2020-07-05T15:48:54.100Z'
 はじめはこのリポジトリをフォークをして設定をいじりながら設定していました。
 しかし、日本語対応フォントがライブラリに入っていないので記事タイトルが文字化けしてしまいました。
 
-![](/assets/images/2020-07-06-01-22-47.png)
+![](/2020-07-06-01-22-47.png)
 
 ↑こんな感じ
 
