--- a/src/content/posts/20200908.mdx
+++ b/src/content/posts/20200908.mdx
@@ -4,7 +4,7 @@ description: ''
 pubDate: '2020-09-08T11:19:57.200Z'
 ---
 
-![](/assets/images/2020-09-08-20-36-00.gif)
+![](/2020-09-08-20-36-00.gif)
 
 ↑のような起動時のスプラッシュ画面を実装したのでメモ
 
