--- a/src/content/posts/20200929.mdx
+++ b/src/content/posts/20200929.mdx
@@ -10,7 +10,7 @@ SwiftUI でタグを配置する際に詰まったため備忘録。
 
 ### 実現したいこと
 
-![](/assets/images/2020-09-29-21-59-43.png)
+![](/2020-09-29-21-59-43.png)
 
 ↑ こういうやつ
 
@@ -37,7 +37,7 @@ struct ContentView: View {
 }
 ```
 
-![](/assets/images/2020-09-29-23-45-10.png)
+![](/2020-09-29-23-45-10.png)
 
 ### 解決方法
 
@@ -98,7 +98,7 @@ struct ContentView: View {
 }
 ```
 
-![](/assets/images/2020-09-29-23-56-47.png)
+![](/2020-09-29-23-56-47.png)
 
 `alignmentGuide` で 横幅を指定することで、タグを自動的に改行する。
 
