--- a/src/content/posts/20200405.mdx
+++ b/src/content/posts/20200405.mdx
@@ -2,6 +2,7 @@
 title: "[Rails] ActiveInteractionについて"
 description: ""
 pubDate: "2020-04-05T23:16:07.956Z"
+draft: false
 ---
 
 最近業務でよく使う[ActiveInteraction](https://github.com/AaronLasseigne/active_interaction)というGemについて、利用する目的を落とし込みたく、このGemを使うことでどのようなメリットがあるのかを深堀りしようと記事にすることにしました。
