--- a/src/content/posts/20200424.mdx
+++ b/src/content/posts/20200424.mdx
@@ -2,6 +2,7 @@
 title: "認可・認証の概要まとめ"
 description: ""
 pubDate: "2020-04-24T17:13:14.956Z"
+draft: false
 ---
 
 RailsでSNS連携のAPIを実装する機会があり、認可・認証に関して勉強する機会があったので簡単に概要を書いていきます。
