--- a/src/content/posts/20200520.mdx
+++ b/src/content/posts/20200520.mdx
@@ -2,6 +2,7 @@
 title: "メタプログラミングRuby 1-3章"
 description: ""
 pubDate: "2020-05-20T10:23:44.956Z"
+draft: false
 ---
 
 今回はしばらく積読となっていたメタプログラミングRubyを読んだので、内容についてまとめていきます。
