--- a/src/content/posts/20200711.mdx
+++ b/src/content/posts/20200711.mdx
@@ -2,6 +2,7 @@
 title: '[Swift] static について'
 description: ''
 pubDate: '2020-07-11T12:56:57.251Z'
+draft: false
 ---
 
 `static` について馴染みがなく、理解するのに少し時間がかかったので備忘録。
