--- a/src/content/posts/20200721.mdx
+++ b/src/content/posts/20200721.mdx
@@ -2,6 +2,7 @@
 title: '[coc.nvim] Failed to load the ESLint library for the document'
 description: ''
 pubDate: '2020-07-20T15:03:12.911Z'
+draft: false
 ---
 
 coc.nvimでeslintに関するエラーがでたときの対処方法
