--- a/src/content/posts/20200620.mdx
+++ b/src/content/posts/20200620.mdx
@@ -2,6 +2,7 @@
 title: 'Vim で Markdown に画像をペーストして展開する'
 description: ''
 pubDate: '2020-06-20T14:09:10.389Z'
+draft: false
 ---
 
 私は普段基本的にはVimを使って開発を行い、当ブログの記事もVimで書いています。
