--- a/src/content/posts/20200908.mdx
+++ b/src/content/posts/20200908.mdx
@@ -2,6 +2,7 @@
 title: '[SwiftUI] Splash Screen の実装'
 description: ''
 pubDate: '2020-09-08T11:19:57.200Z'
+draft: false
 ---
 
 ![](/2020-09-08-20-36-00.gif)
