--- a/src/content/posts/20210628.mdx
+++ b/src/content/posts/20210628.mdx
@@ -2,6 +2,7 @@
 title: 'Railsアプリケーション開発時のDocker構成'
 description: ''
 pubDate: '2021-06-28T13:56:21.528Z'
+draft: false
 ---
 
 WEBアプリケーション開発に参画すると、Dockerでアプリケーションやミドルウェアを実行することになることが多いと思う。
