--- a/src/content/posts/20220205.mdx
+++ b/src/content/posts/20220205.mdx
@@ -2,6 +2,7 @@
 title: '[tmux] True color 対応'
 description: '情報が混在しており、定期的に対応に追われ結構な時間を使うので備忘録。'
 pubDate: '2022-02-05T08:54:59.227Z'
+draft: false
 ---
 
 情報が混在しており、定期的に対応に追われ結構な時間を使うので備忘録。
