--- a/src/content/posts/20200331.mdx
+++ b/src/content/posts/20200331.mdx
@@ -7,42 +7,44 @@ draft: false
 
 **※ブログを移行しました。**
 
-[BlogをMDXとNext.jsで作成した](/posts/20200605/)
+[Blog を MDX と Next.js で作成した](/posts/20200605/)
 
-Webに関わる開発をしている方であれば、ソースコードのホスティングに[GitHub](https://github.co.jp)を利用している人は多いのではないでしょうか。
+Web に関わる開発をしている方であれば、ソースコードのホスティングに[GitHub](https://github.co.jp)を利用している人は多いのではないでしょうか。
 
-GitHubには[GitHub Pages](https://pages.github.com/)という機能があり、静的ページをホスティングすることができます。デフォルトでは`(GitHubのアカウント名).github.io` のリポジトリ名がURLとなりますが、カスタムドメインを使用することもできます。（個人的にgithub.ioは充分シンプルで良いと思うので、このまま使っています。）
+GitHub には[GitHub Pages](https://pages.github.com/)という機能があり、静的ページをホスティングすることができます。デフォルトでは`(GitHubのアカウント名).github.io` のリポジトリ名が URL となりますが、カスタムドメインを使用することもできます。（個人的に github.io は充分シンプルで良いと思うので、このまま使っています。）
 
-また、昨年末にはCI/CDの機能を実現する[GitHub Actions](https://github.co.jp/features/actions)が正式版として公開され話題になりましたね。
+また、昨年末には CI/CD の機能を実現する[GitHub Actions](https://github.co.jp/features/actions)が正式版として公開され話題になりましたね。
 
-> CI（Continuous Integration、継続的インテグレーション）はソフトウェアのビルドやテストを自動化して頻繁に実行することでソフトウェアの品質向上や開発効率化を目指す手法で、CD（Continuous Delivery、継続的デリバリー）はCIに加えてリリースやデプロイまでも自動化する手法。
+> CI（Continuous Integration、継続的インテグレーション）はソフトウェアのビルドやテストを自動化して頻繁に実行することでソフトウェアの品質向上や開発効率化を目指す手法で、CD（Continuous Delivery、継続的デリバリー）は CI に加えてリリースやデプロイまでも自動化する手法。
 
-CI/CDツールとしては[CircleCI](https://circleci.com/ja/)がよく使われている印象ですが、基本的にはGitなどのバージョン管理ツールと組み合わせて使われるため、GitHubだけで完結できるGitHub Actionsのシェアも今後大きくなることが予想されます。
+CI/CD ツールとしては[CircleCI](https://circleci.com/ja/)がよく使われている印象ですが、基本的には Git などのバージョン管理ツールと組み合わせて使われるため、GitHub だけで完結できる GitHub Actions のシェアも今後大きくなることが予想されます。
 
-これらのGitHubの機能を使うことで、以下のワークフローが実現できます。
-1. 静的サイトジェネレータ（Jekyll,Hugo,etc...)でWebサイトを作成
-2. リモートリポジトリ（今回はsourceブランチ）にプッシュ、GitHub Actionsがプッシュを検知し、ビルドを行う
-3. 無事ビルドが完了すると、masterブランチにデプロイ
+これらの GitHub の機能を使うことで、以下のワークフローが実現できます。
 
-静的サイトジェネレータはに関して、JekyllはGitHub Pagesの公式サイトでも推奨されており、一度触ってみましたが、
+1. 静的サイトジェネレータ（Jekyll,Hugo,etc...)で Web サイトを作成
+2. リモートリポジトリ（今回は source ブランチ）にプッシュ、GitHub Actions がプッシュを検知し、ビルドを行う
+3. 無事ビルドが完了すると、master ブランチにデプロイ
+
+静的サイトジェネレータはに関して、Jekyll は GitHub Pages の公式サイトでも推奨されており、一度触ってみましたが、
+
 - プラグインの豊富さ、好みのプラグインがあるか
 - 情報の豊富さ、新しい情報が多いかどうか
 - ビルドにかかる時間
 
-等の理由でHugoを選択しました。
-普段の開発でエディタはVimを使っているので、エディタ上で且つMarkdownで入力ができるのはとても使い勝手が良いです。
+等の理由で Hugo を選択しました。
+普段の開発でエディタは Vim を使っているので、エディタ上で且つ Markdown で入力ができるのはとても使い勝手が良いです。
 
-## GitHub Actionsの設定
+## GitHub Actions の設定
 
-最初にGitHub Actionsを設定していきます。
-GitHubで今回使用するリポジトリを作成し、リポジトリメニューの中からActionsを選択します。
+最初に GitHub Actions を設定していきます。
+GitHub で今回使用するリポジトリを作成し、リポジトリメニューの中から Actions を選択します。
 言語によっては既にあるワークフローを使うこともできるみたいですね。
 
 ![](/github_sc1.png)
 
 今回は右上にある `Set up a workflow yourself` を選択します。
 
-すると左側にyamlファイルを記述するエディタが表示されます。Marketplaceには既に用意されているActionsがありますので、こちらを使ってもいいです。基本的に構文ミスはエディタが指摘してくれますが、その他の細かい部分は右側にあるDocumentationに従い設定を進めましょう。
+すると左側に yaml ファイルを記述するエディタが表示されます。Marketplace には既に用意されている Actions がありますので、こちらを使ってもいいです。基本的に構文ミスはエディタが指摘してくれますが、その他の細かい部分は右側にある Documentation に従い設定を進めましょう。
 今回はスター数の多かった[Hugo Setup](https://github.com/marketplace/actions/hugo-setup)を使うことにしました。
 
 ```yaml
@@ -84,20 +86,20 @@ jobs:
 
 - ソースコードのチェックアウト
 - サブモジュールであるテーマをクローン
-- Hugoのセットアップ
-- Hugoのビルド
-- Hugoのデプロイ
+- Hugo のセットアップ
+- Hugo のビルド
+- Hugo のデプロイ
 
 `uses`ではリポジトリを指定しており、`run` では走らせるコマンドを指定しております。
 
-設定が終わったら`Start Commit`を押下し、ブランチは既にプッシュするブランチとして指定している`source` を作成し、commitします。
+設定が終わったら`Start Commit`を押下し、ブランチは既にプッシュするブランチとして指定している`source` を作成し、commit します。
 
 設定ファイルに書いた `deploy_key` を発行し、リポジトリに登録する必要があります。
-[Deployの際に使っているリポジトリのREADME](https://github.com/peaceiris/actions-gh-pages)にわかりやすい手順が載っているので、こちらは割愛します。
+[Deploy の際に使っているリポジトリの README](https://github.com/peaceiris/actions-gh-pages)にわかりやすい手順が載っているので、こちらは割愛します。
 
 ## サイトの作成
 
-サイトの作成にあたってはHugoの[Quick Start](https://gohugo.io/getting-started/quick-start/)を参考にしました。
+サイトの作成にあたっては Hugo の[Quick Start](https://gohugo.io/getting-started/quick-start/)を参考にしました。
 
 ```shell
 $ brew install hugo
@@ -116,9 +118,9 @@ $ git switch -c source
 $ git submodule add https://github.com/Track3/hermit.git themes/hermit
 ```
 
-その後、`config.toml` でWebサイトの設定をしていきます。
+その後、`config.toml` で Web サイトの設定をしていきます。
 設定にあたっては、各テーマのリポジトリに含まれるものを参考にしました。
-Google Analyticsを使ったアクセス解析などもこちらで設定できます。
+Google Analytics を使ったアクセス解析などもこちらで設定できます。
 
 ## ページの作成
 
@@ -139,14 +141,13 @@ $ hugo server -D
 `-D` オプションを付けることで、`draft: true` （本番環境では表示しない）設定のページの含めてビルドしてくれます。
 `localhost:1313` でブラウザからページが確認できます。ホットリロードであるためファイル変更後に保存すると、自動的に変更を検知してビルド・リロードすることでブラウザ上に変更が反映されます。便利ですね…
 
-
 最後に `hugo` コマンドでサイトを生成し、デプロイまで進めましょう。
-変更をリモートリポジトリにプッシュすることでGitHub Actionsのジョブが走ります。以上で完了です。
+変更をリモートリポジトリにプッシュすることで GitHub Actions のジョブが走ります。以上で完了です。
 
 ## 最後に
 
-はてなブログやQiitaのようなサービスと比べると、テーマ選定等も含めて初期設定に少し時間はかかりますが、ポートフォリオサイトとしても使えるのでオススメです。
+はてなブログや Qiita のようなサービスと比べると、テーマ選定等も含めて初期設定に少し時間はかかりますが、ポートフォリオサイトとしても使えるのでオススメです。
 
-GitHub Actionsを使えばデプロイも自動化できますし、やはりなによりもGitHub上で完結しているのはとても楽だと感じました。
+GitHub Actions を使えばデプロイも自動化できますし、やはりなによりも GitHub 上で完結しているのはとても楽だと感じました。
 
 全て無料で触ることができますので、是非お試しください。
