--- a/src/content/posts/20200605.mdx
+++ b/src/content/posts/20200605.mdx
@@ -2,6 +2,7 @@
 title: "Blog を MDX, Next.js で作成した"
 description: ""
 pubDate: "2020-06-05T15:01:25.274Z"
+tags: ["mdx", "Next.js", "Blog"]
 draft: false
 ---
 
