--- a/src/content/posts/20200613.mdx
+++ b/src/content/posts/20200613.mdx
@@ -2,6 +2,7 @@
 title: "OpenAPI (Swagger) で APIリファレンス作成"
 description: ""
 pubDate: "2020-06-13T05:35:45.983Z"
+tags: ["OpenAPI", "Swagger", "API"]
 draft: false
 ---
 
