--- a/src/content/posts/20200614.mdx
+++ b/src/content/posts/20200614.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Next.js] Headタグ内のタグ重複を防ぐ"
+title: "Headタグ内のタグ重複を防ぐ"
 description: ""
 pubDate: "2020-06-14T08:28:13.461Z"
+tags: ["Next.js"]
 draft: false
 ---
 
