--- a/src/content/posts/20200620.mdx
+++ b/src/content/posts/20200620.mdx
@@ -2,6 +2,7 @@
 title: "Vim で Markdown に画像をペーストして展開する"
 description: ""
 pubDate: "2020-06-20T14:09:10.389Z"
+tags: ["Vim", "Markdown", "Shell"]
 draft: false
 ---
 
