--- a/src/content/posts/20200708.mdx
+++ b/src/content/posts/20200708.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Swift] Access Control と Scope について"
+title: "Access Control と Scope について"
 description: ""
 pubDate: "2020-07-08T03:55:56.354Z"
+tags: ["Swift"]
 draft: false
 ---
 
