--- a/src/content/posts/20200711.mdx
+++ b/src/content/posts/20200711.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Swift] static について"
+title: "static について"
 description: ""
 pubDate: "2020-07-11T12:56:57.251Z"
+tags: ["Swift"]
 draft: false
 ---
 
