--- a/src/content/posts/20200720.mdx
+++ b/src/content/posts/20200720.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Vim] 定義元ジャンプを filetype で使い分ける"
+title: "定義元ジャンプを filetype で使い分ける"
 description: ""
 pubDate: "2020-07-20T11:39:15.973Z"
+tags: ["Vim"]
 draft: false
 ---
 
