--- a/src/content/posts/20200721.mdx
+++ b/src/content/posts/20200721.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[coc.nvim] Failed to load the ESLint library for the document"
+title: "Failed to load the ESLint library for the document"
 description: ""
 pubDate: "2020-07-20T15:03:12.911Z"
+tags: ["Neovim", "Vim"]
 draft: false
 ---
 
