--- a/src/content/posts/20200802.mdx
+++ b/src/content/posts/20200802.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[OpenAPI] yamlinc について"
+title: "yamlinc について"
 description: ""
 pubDate: "2020-08-02T08:41:40.911Z"
+tags: ["OpenAPI"]
 draft: false
 ---
 
