--- a/src/content/posts/20200823.mdx
+++ b/src/content/posts/20200823.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Vim] 文字崩れ, 文字が残ってしまうのを防ぐ"
+title: "文字崩れ, 文字が残ってしまうのを防ぐ"
 description: ""
 pubDate: "2020-08-23T14:11:20.574Z"
+tags: ["Vim"]
 draft: false
 ---
 
