--- a/src/content/posts/20200929.mdx
+++ b/src/content/posts/20200929.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[SwiftUI] タグを自動的に改行させる"
+title: "タグを自動的に改行させる"
 description: ""
 pubDate: "2020-09-29T12:28:55.894Z"
+tags: ["Swift", "SwiftUI"]
 draft: false
 ---
 
