--- a/src/content/posts/20201228.mdx
+++ b/src/content/posts/20201228.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Rails] URI::InvalidURIError (bad URI(is not URI?): nil) Active Storage service_url"
+title: "URI::InvalidURIError (bad URI(is not URI?): nil) Active Storage service_url"
 description: ""
 pubDate: "2020-12-28T05:29:29.032Z"
+tags: ["Rails", "ActiveStorage"]
 draft: false
 ---
 
