--- a/src/content/posts/20210616.mdx
+++ b/src/content/posts/20210616.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Rails] 一連の処理に排他ロックをかける"
+title: "一連の処理に排他ロックをかける"
 description: ""
 pubDate: "2021-06-16T12:53:46.758Z"
+tags: ["Rails"]
 draft: false
 ---
 
