--- a/src/content/posts/20210702.mdx
+++ b/src/content/posts/20210702.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Rails] 6.0.3.7 -> 6.1.4 へのアップグレード"
+title: "6.0.3.7 -> 6.1.4 へのアップグレード"
 description: ""
 pubDate: "2021-07-02T07:29:12.012Z"
+tags: ["Rails"]
 draft: false
 ---
 
