--- a/src/content/posts/20210713.mdx
+++ b/src/content/posts/20210713.mdx
@@ -2,6 +2,7 @@
 title: "ターミエミュレータを iTerm2 から Alacritty に乗り換えた"
 description: ""
 pubDate: "2021-07-13T14:13:37.057Z"
+tags: ["Terminal"]
 draft: false
 ---
 
