--- a/src/content/posts/2023-03-16-00-35-23.mdx
+++ b/src/content/posts/2023-03-16-00-35-23.mdx
@@ -2,6 +2,7 @@
 title: "Astro でブログを作り直した"
 description: "Next.js で作成したブログを Astro で作り直しました。"
 pubDate: "2023-03-16T00:35:23+09:00"
+tags: ["Astro", "Blog"]
 draft: false
 ---
 
