--- a/src/content/posts/20200405.mdx
+++ b/src/content/posts/20200405.mdx
@@ -2,6 +2,7 @@
 title: "[Rails] ActiveInteractionについて"
 description: ""
 pubDate: "2020-04-05T23:16:07.956Z"
+tags: ["ActiveInteraction", "Rails", "Gem", "デザインパターン"]
 draft: false
 ---
 
