--- a/src/content/posts/20200627.mdx
+++ b/src/content/posts/20200627.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[XCode] ローカルサーバーと通信する"
+title: "ローカルサーバーと通信する"
 description: ""
 pubDate: "2020-06-27T10:13:56.068Z"
+tags: ["XCode", "iOS"]
 draft: false
 ---
 
