--- a/src/content/posts/20200706.mdx
+++ b/src/content/posts/20200706.mdx
@@ -2,6 +2,7 @@
 title: "node-canvas で OGP に対応した"
 description: ""
 pubDate: "2020-07-05T15:48:54.100Z"
+tags: ["canvas", "OGP", "Blog"]
 draft: false
 ---
 
