--- a/src/content/posts/20200908.mdx
+++ b/src/content/posts/20200908.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[SwiftUI] Splash Screen の実装"
+title: "Splash Screen の実装"
 description: ""
 pubDate: "2020-09-08T11:19:57.200Z"
+tags: ["Swift", "SwiftUI"]
 draft: false
 ---
 
