--- a/src/content/posts/20210331.mdx
+++ b/src/content/posts/20210331.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Vuex] axios を使った action を呼び出し元で同期的に扱いたい"
+title: "axios を使った action を呼び出し元で同期的に扱いたい"
 description: ""
 pubDate: "2021-03-31T15:23:04.456Z"
+tags: ["Vuex", "Axios"]
 draft: false
 ---
 
