--- a/src/content/posts/20210409.mdx
+++ b/src/content/posts/20210409.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Vim] Markdown でバッククォートやクォーテーションが省略される"
+title: "Markdown でバッククォートやクォーテーションが省略される"
 description: ""
 pubDate: "2021-04-09T15:33:31.968Z"
+tags: ["Vim", "Markdown"]
 draft: false
 ---
 
