--- a/src/content/posts/20210629.mdx
+++ b/src/content/posts/20210629.mdx
@@ -1,7 +1,8 @@
 ---
-title: "[Vim] Docker 環境で Vim 上で RSpec を実行する"
+title: "Docker 環境で Vim 上で RSpec を実行する"
 description: ""
 pubDate: "2021-06-29T06:33:14.640Z"
+tags: ["Vim", "Docker"]
 draft: false
 ---
 
