chore: Add description to posts written past

--- a/src/content/posts/20200520.mdx
+++ b/src/content/posts/20200520.mdx
@@ -1,6 +1,6 @@
 ---
 title: "メタプログラミングRuby 1-3章"
-description: ""
+description: "今回はしばらく積読となっていたメタプログラミング Ruby を読んだので、内容についてまとめていきます。"
 pubDate: "2020-05-20T10:23:44.956Z"
 tags: ["メタプログラミング", "Ruby"]
 draft: false
