--- a/src/content/posts/20200708.mdx
+++ b/src/content/posts/20200708.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Access Control と Scope について"
-description: ""
+description: "私がよく使っている Ruby におけるアクセス制御には Module#private や Module#protected があります。"
 pubDate: "2020-07-08T03:55:56.354Z"
 tags: ["Swift"]
 draft: false
