--- a/src/content/posts/20200711.mdx
+++ b/src/content/posts/20200711.mdx
@@ -1,6 +1,6 @@
 ---
 title: "static について"
-description: ""
+description: "static について馴染みがなく、理解するのに少し時間がかかったので備忘録。"
 pubDate: "2020-07-11T12:56:57.251Z"
 tags: ["Swift"]
 draft: false
