--- a/src/content/posts/20200721.mdx
+++ b/src/content/posts/20200721.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Failed to load the ESLint library for the document"
-description: ""
+description: "coc.nvim で eslint に関するエラーがでたときの対処方法"
 pubDate: "2020-07-20T15:03:12.911Z"
 tags: ["Neovim", "Vim"]
 draft: false
