--- a/src/content/posts/20200908.mdx
+++ b/src/content/posts/20200908.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Splash Screen の実装"
-description: ""
+description: "SwiftUI であれば非常に少ないコードでスプラッシュ画面を実現できた。"
 pubDate: "2020-09-08T11:19:57.200Z"
 tags: ["Swift", "SwiftUI"]
 draft: false
