--- a/src/content/posts/20210409.mdx
+++ b/src/content/posts/20210409.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Markdown でバッククォートやクォーテーションが省略される"
-description: ""
+description: "init.vim (.vimrc) に以下を記述"
 pubDate: "2021-04-09T15:33:31.968Z"
 tags: ["Vim", "Markdown"]
 draft: false
