--- a/src/content/posts/20210616.mdx
+++ b/src/content/posts/20210616.mdx
@@ -1,6 +1,6 @@
 ---
 title: "一連の処理に排他ロックをかける"
-description: ""
+description: "データの整合性を保つために、トランザクションはたびたび使われる。"
 pubDate: "2021-06-16T12:53:46.758Z"
 tags: ["Rails"]
 draft: false
