--- a/src/content/posts/20210629.mdx
+++ b/src/content/posts/20210629.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Docker 環境で Vim 上で RSpec を実行する"
-description: ""
+description: "タイトルには 「Docker 環境で」 と記したが、自動的に Docker 環境かそうでないかを識別するよう設定している。"
 pubDate: "2021-06-29T06:33:14.640Z"
 tags: ["Vim", "Docker"]
 draft: false
@@ -8,7 +8,7 @@ draft: false
 
 ## はじめに
 
-タイトルには `Docker 環境で` と記したが、自動的に Docker 環境かそうでないかを識別するよう設定している。
+タイトルには 「Docker 環境で」 と記したが、自動的に Docker 環境かそうでないかを識別するよう設定している。
 
 ## 利用するライブラリ
 
