--- a/src/content/posts/20210713.mdx
+++ b/src/content/posts/20210713.mdx
@@ -1,6 +1,6 @@
 ---
 title: "ターミエミュレータを iTerm2 から Alacritty に乗り換えた"
-description: ""
+description: "これまで開発時には iTerm2 を使っていて特段困ることはなかったが、 Neovim での開発時、特にファイルサイズが大きいと少々カクつくことがあるのは気になっていた。 そうは言っても Neovim 利用時に限定しているので、基本的にはプラグインの整理をして対処していたが、 Rust 製でパフォーマンスがよい Alacritty というターミナルエミュレータがあると Twitter でたまたま情報を見かけたので、一度試してみることにした。"
 pubDate: "2021-07-13T14:13:37.057Z"
 tags: ["Terminal"]
 draft: false
