--- a/src/content/posts/20200424.mdx
+++ b/src/content/posts/20200424.mdx
@@ -1,6 +1,6 @@
 ---
 title: "認可・認証の概要まとめ"
-description: ""
+description: "Rails で SNS 連携の API を実装する機会があり、認可・認証に関して勉強する機会があったので簡単に概要を書いていきます。"
 pubDate: "2020-04-24T17:13:14.956Z"
 tags: ["OAuth", "OpenID Connect", "認可", "認証"]
 draft: false
