--- a/src/content/posts/20200627.mdx
+++ b/src/content/posts/20200627.mdx
@@ -1,6 +1,6 @@
 ---
 title: "ローカルサーバーと通信する"
-description: ""
+description: "Rails プロジェクトで用意した API に iOS アプリの開発環境からアクセスしてデータを取得したい。"
 pubDate: "2020-06-27T10:13:56.068Z"
 tags: ["XCode", "iOS"]
 draft: false
