--- a/src/content/posts/20200720.mdx
+++ b/src/content/posts/20200720.mdx
@@ -1,6 +1,6 @@
 ---
 title: "定義元ジャンプを filetype で使い分ける"
-description: ""
+description: "今回はファイルタイプに応じてジャンプのコマンドを使い分ける設定をしました。"
 pubDate: "2020-07-20T11:39:15.973Z"
 tags: ["Vim"]
 draft: false
