--- a/src/content/posts/20200802.mdx
+++ b/src/content/posts/20200802.mdx
@@ -1,6 +1,6 @@
 ---
 title: "yamlinc について"
-description: ""
+description: "以前 OpenAPI 仕様の API リファレンスについて記事を書いた。"
 pubDate: "2020-08-02T08:41:40.911Z"
 tags: ["OpenAPI"]
 draft: false
