--- a/src/content/posts/20200929.mdx
+++ b/src/content/posts/20200929.mdx
@@ -1,6 +1,6 @@
 ---
 title: "タグを自動的に改行させる"
-description: ""
+description: "SwiftUI でタグを配置する際に詰まったため備忘録。"
 pubDate: "2020-09-29T12:28:55.894Z"
 tags: ["Swift", "SwiftUI"]
 draft: false
