--- a/src/content/posts/20201228.mdx
+++ b/src/content/posts/20201228.mdx
@@ -1,6 +1,6 @@
 ---
 title: "URI::InvalidURIError (bad URI(is not URI?): nil) Active Storage service_url"
-description: ""
+description: "APImode で ActiveStorage を利用した際、開発環境で以下のエラーが発生したため対処方法を記録"
 pubDate: "2020-12-28T05:29:29.032Z"
 tags: ["Rails", "ActiveStorage"]
 draft: false
