--- a/src/content/posts/20210331.mdx
+++ b/src/content/posts/20210331.mdx
@@ -1,6 +1,6 @@
 ---
 title: "axios を使った action を呼び出し元で同期的に扱いたい"
-description: ""
+description: "Vuex の action で axios を用いて API を実行する処理を利用する際に詰まったため記録"
 pubDate: "2021-03-31T15:23:04.456Z"
 tags: ["Vuex", "Axios"]
 draft: false
