--- a/src/content/posts/20210702.mdx
+++ b/src/content/posts/20210702.mdx
@@ -1,6 +1,6 @@
 ---
 title: "6.0.3.7 -> 6.1.4 へのアップグレード"
-description: ""
+description: "現在担当のプロジェクトにおいて Rails のアップグレードを行ったので、備忘録。"
 pubDate: "2021-07-02T07:29:12.012Z"
 tags: ["Rails"]
 draft: false
