--- a/next-contentlayer/app/content/posts/20200424.mdx
+++ b/next-contentlayer/app/content/posts/20200424.mdx
@@ -7,7 +7,7 @@ tags:
   - OpenID Connect
   - 認可
   - 認証
-isPublished: false
+isPublished: true
 ---
 
 Rails で SNS 連携の API を実装する機会があり、認可・認証に関して勉強する機会があったので簡単に概要を書いていきます。
