--- a/next-contentlayer/app/content/posts/20200613.mdx
+++ b/next-contentlayer/app/content/posts/20200613.mdx
@@ -6,7 +6,7 @@ tags:
   - OpenAPI
   - Swagger
   - API
-isPublished: false
+isPublished: true
 ---
 
 現在業務でメンズファッション関連のサービス開発をしていて、Rails でバックエンド API を、SwiftUI で iOS アプリを作成しています。
