--- a/next-contentlayer/app/content/posts/20200711.mdx
+++ b/next-contentlayer/app/content/posts/20200711.mdx
@@ -4,7 +4,7 @@ description: static について馴染みがなく、理解するのに少し時
 date: 2020-07-11T12:56:57.251Z
 tags:
   - Swift
-isPublished: false
+isPublished: true
 ---
 
 `static` について馴染みがなく、理解するのに少し時間がかかったので備忘録。
