--- a/next-contentlayer/app/content/posts/20210331.mdx
+++ b/next-contentlayer/app/content/posts/20210331.mdx
@@ -5,7 +5,7 @@ date: 2021-03-31T15:23:04.456Z
 tags:
   - Vuex
   - Axios
-isPublished: false
+isPublished: true
 ---
 
 Vuex の action で axios を用いて API を実行する処理を利用する際に詰まったため記録
