--- a/next-contentlayer/app/content/posts/20210702.mdx
+++ b/next-contentlayer/app/content/posts/20210702.mdx
@@ -4,7 +4,7 @@ description: 現在担当のプロジェクトにおいて Rails のアップグ
 date: 2021-07-02T07:29:12.012Z
 tags:
   - Rails
-isPublished: false
+isPublished: true
 ---
 
 ## はじめに
