--- a/next-contentlayer/app/content/posts/20200520.mdx
+++ b/next-contentlayer/app/content/posts/20200520.mdx
@@ -5,7 +5,7 @@ date: 2020-05-20T10:23:44.956Z
 tags:
   - メタプログラミング
   - Ruby
-isPublished: false
+isPublished: true
 ---
 
 今回はしばらく積読となっていたメタプログラミング Ruby を読んだので、内容についてまとめていきます。
