--- a/next-contentlayer/app/content/posts/20200721.mdx
+++ b/next-contentlayer/app/content/posts/20200721.mdx
@@ -5,7 +5,7 @@ date: 2020-07-20T15:03:12.911Z
 tags:
   - Neovim
   - Vim
-isPublished: false
+isPublished: true
 ---
 
 coc.nvim で eslint に関するエラーがでたときの対処方法
