--- a/next-contentlayer/app/content/posts/20200908.mdx
+++ b/next-contentlayer/app/content/posts/20200908.mdx
@@ -5,7 +5,7 @@ date: 2020-09-08T11:19:57.200Z
 tags:
   - Swift
   - SwiftUI
-isPublished: false
+isPublished: true
 ---
 
 ![](/2020-09-08-20-36-00.gif)
