--- a/next-contentlayer/app/content/posts/20201228.mdx
+++ b/next-contentlayer/app/content/posts/20201228.mdx
@@ -5,7 +5,7 @@ date: 2020-12-28T05:29:29.032Z
 tags:
   - Rails
   - ActiveStorage
-isPublished: false
+isPublished: true
 ---
 
 APImode で ActiveStorage を利用した際、開発環境で以下のエラーが発生したため対処方法を記録
