--- a/next-contentlayer/app/content/posts/20210628.mdx
+++ b/next-contentlayer/app/content/posts/20210628.mdx
@@ -5,7 +5,7 @@ date: 2021-06-28T13:56:21.528Z
 tags:
   - Rails
   - Docker
-isPublished: false
+isPublished: true
 ---
 
 WEB アプリケーション開発に参画すると、Docker でアプリケーションやミドルウェアを実行することになることが多いと思う。
