--- a/next-contentlayer/app/content/posts/2023-03-16-00-35-23.mdx
+++ b/next-contentlayer/app/content/posts/2023-03-16-00-35-23.mdx
@@ -5,7 +5,7 @@ date: 2023-03-16T00:35:23+09:00
 tags:
   - Astro
   - Blog
-isPublished: false
+isPublished: true
 ---
 
 Next.js のテンプレートを使って作られたブログを Astro で作り直しました。
