fix: tag's letters format

--- a/app/content/posts/20200518.mdx
+++ b/app/content/posts/20200518.mdx
@@ -3,8 +3,8 @@ title: SSG で作成したブログを検索結果に表示する
 description: このブログは Hugo を使って作成したのですが、SEO 関連の設定が中途半端だったので今回一通り設定しました。
 date: 2020-05-18T11:38:45.956Z
 tags:
-  - SEO
-  - Blog
+  - seo
+  - blog
 isPublished: true
 ---
 
