--- a/app/content/posts/20200614.mdx
+++ b/app/content/posts/20200614.mdx
@@ -3,7 +3,7 @@ title: Head タグ内のタグ重複を防ぐ
 description: 重複を避けたいタグに key オプションを追加し、同名のキーを設定します。
 date: 2020-06-14T08:28:13.461Z
 tags:
-  - Next.js
+  - nextjs
 isPublished: true
 ---
 
