--- a/app/content/posts/20200620.mdx
+++ b/app/content/posts/20200620.mdx
@@ -3,9 +3,9 @@ title: Vim で Markdown に画像をペーストして展開する
 description: 私は普段基本的には Vim を使って開発を行い、当ブログの記事も Vim で書いています。
 date: 2020-06-20T14:09:10.389Z
 tags:
-  - Vim
-  - Markdown
-  - Shell
+  - vim
+  - markdown
+  - shell
 isPublished: true
 ---
 
