--- a/app/content/posts/20200711.mdx
+++ b/app/content/posts/20200711.mdx
@@ -3,7 +3,7 @@ title: static について
 description: static について馴染みがなく、理解するのに少し時間がかかったので備忘録。
 date: 2020-07-11T12:56:57.251Z
 tags:
-  - Swift
+  - swift
 isPublished: true
 ---
 
