--- a/app/content/posts/20200720.mdx
+++ b/app/content/posts/20200720.mdx
@@ -3,7 +3,7 @@ title: 定義元ジャンプを filetype で使い分ける
 description: 今回はファイルタイプに応じてジャンプのコマンドを使い分ける設定をしました。
 date: 2020-07-20T11:39:15.973Z
 tags:
-  - Vim
+  - vim
 isPublished: true
 ---
 
