--- a/app/content/posts/20200929.mdx
+++ b/app/content/posts/20200929.mdx
@@ -3,8 +3,8 @@ title: タグを自動的に改行させる
 description: SwiftUI でタグを配置する際に詰まったため備忘録。
 date: 2020-09-29T12:28:55.894Z
 tags:
-  - Swift
-  - SwiftUI
+  - swift
+  - swiftui
 isPublished: true
 ---
 
