--- a/app/content/posts/2023-03-16-00-35-23.mdx
+++ b/app/content/posts/2023-03-16-00-35-23.mdx
@@ -3,8 +3,8 @@ title: Astro でブログを作り直した
 description: Next.js で作成したブログを Astro で作り直しました。
 date: 2023-03-16T00:35:23+09:00
 tags:
-  - Astro
-  - Blog
+  - astro
+  - blog
 isPublished: true
 ---
 
