--- a/app/content/posts/20200405.mdx
+++ b/app/content/posts/20200405.mdx
@@ -3,10 +3,10 @@ title: ActiveInteractionについて
 description: 最近業務でよく使うActiveInteractionという Gem について、利用する目的を落とし込みたく、この Gem を使うことでどのようなメリットがあるのかを深堀りしようと記事にすることにしました。
 date: 2020-04-05T23:16:07.956Z
 tags:
-  - ActiveInteraction
-  - Rails
-  - Gem
-  - デザインパターン
+  - active-interaction
+  - rails
+  - gem
+  - design-pattern
 isPublished: true
 ---
 
