--- a/app/content/posts/20200424.mdx
+++ b/app/content/posts/20200424.mdx
@@ -3,10 +3,8 @@ title: 認可・認証の概要まとめ
 description: Rails で SNS 連携の API を実装する機会があり、認可・認証に関して勉強する機会があったので簡単に概要を書いていきます。
 date: 2020-04-24T17:13:14.956Z
 tags:
-  - OAuth
-  - OpenID Connect
-  - 認可
-  - 認証
+  - oauth
+  - openid-connect
 isPublished: true
 ---
 
