--- a/app/content/posts/20200520.mdx
+++ b/app/content/posts/20200520.mdx
@@ -3,8 +3,8 @@ title: メタプログラミングRuby 1-3章
 description: 今回はしばらく積読となっていたメタプログラミング Ruby を読んだので、内容についてまとめていきます。
 date: 2020-05-20T10:23:44.956Z
 tags:
-  - メタプログラミング
-  - Ruby
+  - metaprogramming
+  - ruby
 isPublished: true
 ---
 
