--- a/app/content/posts/20200627.mdx
+++ b/app/content/posts/20200627.mdx
@@ -3,8 +3,8 @@ title: ローカルサーバーと通信する
 description: Rails プロジェクトで用意した API に iOS アプリの開発環境からアクセスしてデータを取得したい。
 date: 2020-06-27T10:13:56.068Z
 tags:
-  - XCode
-  - iOS
+  - xcode
+  - ios
 isPublished: true
 ---
 
