--- a/app/content/posts/20200708.mdx
+++ b/app/content/posts/20200708.mdx
@@ -3,7 +3,7 @@ title: Access Control と Scope について
 description: 私がよく使っている Ruby におけるアクセス制御には Module#private や Module#protected があります。
 date: 2020-07-08T03:55:56.354Z
 tags:
-  - Swift
+  - swift
 isPublished: true
 ---
 
