--- a/app/content/posts/20200721.mdx
+++ b/app/content/posts/20200721.mdx
@@ -3,8 +3,8 @@ title: Failed to load the ESLint library for the document
 description: coc.nvim で eslint に関するエラーがでたときの対処方法
 date: 2020-07-20T15:03:12.911Z
 tags:
-  - Neovim
-  - Vim
+  - neovim
+  - vim
 isPublished: true
 ---
 
