--- a/app/content/posts/20200802.mdx
+++ b/app/content/posts/20200802.mdx
@@ -3,7 +3,7 @@ title: yamlinc について
 description: 以前 OpenAPI 仕様の API リファレンスについて記事を書いた。
 date: 2020-08-02T08:41:40.911Z
 tags:
-  - OpenAPI
+  - openapi
 isPublished: true
 ---
 
