--- a/app/content/posts/20200908.mdx
+++ b/app/content/posts/20200908.mdx
@@ -3,8 +3,8 @@ title: Splash Screen の実装
 description: SwiftUI であれば非常に少ないコードでスプラッシュ画面を実現できた。
 date: 2020-09-08T11:19:57.200Z
 tags:
-  - Swift
-  - SwiftUI
+  - swift
+  - swiftui
 isPublished: true
 ---
 
