--- a/app/content/posts/20210331.mdx
+++ b/app/content/posts/20210331.mdx
@@ -3,8 +3,8 @@ title: axios を使った action を呼び出し元で同期的に扱いたい
 description: Vuex の action で axios を用いて API を実行する処理を利用する際に詰まったため記録
 date: 2021-03-31T15:23:04.456Z
 tags:
-  - Vuex
-  - Axios
+  - vuex
+  - axios
 isPublished: true
 ---
 
