--- a/app/content/posts/20210616.mdx
+++ b/app/content/posts/20210616.mdx
@@ -3,7 +3,7 @@ title: 一連の処理に排他ロックをかける
 description: データの整合性を保つために、トランザクションはたびたび使われる。
 date: 2021-06-16T12:53:46.758Z
 tags:
-  - Rails
+  - rails
 isPublished: true
 ---
 
