--- a/app/content/posts/20210628.mdx
+++ b/app/content/posts/20210628.mdx
@@ -3,8 +3,8 @@ title: Railsアプリケーション開発時のDocker構成
 description: WEB アプリケーション開発に参画すると、Docker でアプリケーションやミドルウェアを実行することになることが多いと思う。
 date: 2021-06-28T13:56:21.528Z
 tags:
-  - Rails
-  - Docker
+  - rails
+  - docker
 isPublished: true
 ---
 
