--- a/app/content/posts/20210702.mdx
+++ b/app/content/posts/20210702.mdx
@@ -3,7 +3,7 @@ title: 6.0.3.7 -> 6.1.4 へのアップグレード
 description: 現在担当のプロジェクトにおいて Rails のアップグレードを行ったので、備忘録。
 date: 2021-07-02T07:29:12.012Z
 tags:
-  - Rails
+  - rails
 isPublished: true
 ---
 
