--- a/app/content/posts/20220205.mdx
+++ b/app/content/posts/20220205.mdx
@@ -3,7 +3,7 @@ title: True color 対応
 description: 情報が混在しており、定期的に対応に追われ結構な時間を使うので備忘録。
 date: 2022-02-05T08:54:59.227Z
 tags:
-  - Tmux
+  - tmux
 isPublished: true
 ---
 
