fix: prettier config and pnpm format command

--- a/app/content/posts/2023-03-16-00-35-23.mdx
+++ b/app/content/posts/2023-03-16-00-35-23.mdx
@@ -10,6 +10,8 @@ isPublished: true
 
 Next.js のテンプレートを使って作られたブログを Astro で作り直しました。
 
+**2023/06/29 追記：Next.js に出戻りしました。Astro 版はリポジトリを分けて残しています。https://github.com/reona5/dev-by-astro**
+
 ## Astro を選択した理由
 
 Astro は SSG として機能する Web フレームワークです。ブログのような静的コンテンツの配信を目的とするウェブサイトの構築に向いています。
