style: ページの width を広くして色を微調整した

--- a/app/content/posts/20210713.mdx
+++ b/app/content/posts/20210713.mdx
@@ -84,7 +84,7 @@ iTerm2 は MacOS 用のソフトウェアであるため、Linux であったり
 
 これも致命的ではないけど結構気になる。Twitter とか見てるとインライン入力も含めて問題になってるみたい。
 
-# 最後に
+## 最後に
 
 ターミナルエミュレータを変更したついでに colorscheme や font も変更した。
 
