feat: ツイート共有する際にハッシュタグとアカウント名を追加

--- a/app/content/posts/2023-07-12-19-45-32.mdx
+++ b/app/content/posts/2023-07-12-19-45-32.mdx
@@ -3,7 +3,7 @@ title: "macOS のセットアップをする"
 description: "M1 MacBook Air(2020) を初期化する機会があったため、セットアップの手順を記録しておきます。"
 date: "2023-07-12T19:45:32+09:00"
 tags:
-  - macOS
+  - macos
   - environment-setup
 isPublished: true
 ---
