最新記事の更新

--- a/app/content/posts/20230921220346.mdx
+++ b/app/content/posts/20230921220346.mdx
@@ -29,7 +29,7 @@ isPublished: true
 職場によって提出書類や手続きが異なる場合があります。
 健康保険証の発行や育児休業給付金の申請に関して、健康保険組合ではなく国民健康保険である場合には役所での手続きが必要になるようです。
 
-その他に、母の場合は出産育児一時金や出産手当金の申請が必要です。
+その他に、母親の場合は出産育児一時金や出産手当金の申請が必要です。特に出産手当金に関しては、職場に提出する請求書を産院で事前に記載してもらう必要があり、私の依頼先の病院では返却までに1週間ほど要したので、出産前に請求書を用意しておき早めに産院と連携しておくとスムーズでしょう。
 
 ## 役所での手続き
 
